--- a/app.json
+++ b/app.json
@@ -8,7 +8,12 @@
     "splash": {
       "image": "./assets/splash.png",
       "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+      "backgroundColor": "#ffffff",
+    "platform": [
+      "ios",
+      "android",
+      "web"
+    ]
     },
     "updates": {
       "fallbackToCacheTimeout": 0
